--- a/index.html
+++ b/index.html
@@ -5,3 +5,15 @@
 <h2>
 Year 11
 </h2>
+<p>
+My full names Fathima Adeeba Imam Yoosuf, my birthday is on the 10th of December. I am a saggitarius and INFJ, I love the rain and think that Harry Styles is overrated. I have been to 6 schools and lived in three countires, Sri Lanka, Kuwait and now New Zealand. I have no clue what I want to do in the future other than to become rich!
+</p>
+<p>
+  My interests include:
+</p>
+
+<ul>
+  <li> Music (Rnb, rap and hiphop) </li>
+  <li> Reading (Poetry and literature) </li>
+  <li> Psychology </li>
+</ul>
