--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@ My full names Fathima Adeeba Imam Yoosuf, my birthday is on the 10th of December
   <li> Reading (Poetry and literature) </li>
   <li> Psychology </li>
 </ul>
+<img src="https://i.pinimg.com/originals/f9/46/93/f94693e949a69d65e1473104be04e0ed.jpg" alt="Live Laugh Love Frank Ocean">
