--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <nav>
   <a href="bff.html"> My Friends </a>
 </nav>
-<h2>Year 11</h2>
-<p>My full names Fathima Adeeba Imam Yoosuf, my birthday is on the 10th of December. I am a sagitarius and INFJ, I love the rain and think that Harry Styles is overrated. I have been to 6 schools and lived in three countires, Sri Lanka, Kuwait and now New Zealand. I have no clue what I want to do in the future other than to become rich! <a href="https://cursoreffects.com/">lol</a></p>
-<p>My interests include:</p>
+<main>
+  <h2>Year 11</h2>
+  <p>My full names Fathima Adeeba Imam Yoosuf, my birthday is on the 10th of December. I am a sagitarius and INFJ, I love the rain and think that Harry Styles is overrated. I have been to 6 schools and lived in three countires, Sri Lanka, Kuwait and now New Zealand. I have no clue what I want to do in the future other than to become rich! <a href="https://cursoreffects.com/">lol</a></p>
+  <p>My interests include:</p>
 
-<ul>
-  <li>Music (Rnb, rap and hiphop)</li>
-  <li>Reading (Poetry and literature)</li>
-  <li>Psychology</li>
-</ul>
+  <ul>
+    <li>Music (Rnb, rap and hiphop)</li>
+    <li>Reading (Poetry and literature)</li>
+    <li>Psychology</li>
+  </ul>
+</main>
 <img src="https://i.pinimg.com/originals/f9/46/93/f94693e949a69d65e1473104be04e0ed.jpg" alt="Live Laugh Love Frank Ocean" />
