Added a copyright symbol, and my name

--- a/index.html
+++ b/index.html
@@ -16,3 +16,6 @@
   </ul>
 </main>
 <img src="https://i.pinimg.com/originals/f9/46/93/f94693e949a69d65e1473104be04e0ed.jpg" alt="Live Laugh Love Frank Ocean" />
+<footer>
+  <p>&copy; Adeeba 2023</p>
+</footer>
