added style to the h1 and a and added home link

--- a/bff.html
+++ b/bff.html
@@ -1,18 +1,18 @@
 <h1>Introduce Yourself</h1>
-
+<a href="index.html"> Home </a>
 <h2>My Best Friends</h2>
 
 <ul>
   <li>
-    <img src="hey.jpg" />
+    <img src="hey.jpg" alt="Live Laugh Love Isha and Mahima" />
     <p>Isha and Mahima</p>
   </li>
   <li>
-    <img src="hima.jpg" />
+    <img src="hima.jpg" alt="Mahima and Arabella" />
     <p>Mahima and Bella</p>
   </li>
   <li>
-    <img src="pia.jpg" />
+    <img src="pia.jpg" alt="Live Laugh Love Pia" />
     <p>Pia</p>
   </li>
 </ul>
