--- a/index.html
+++ b/index.html
@@ -19,3 +19,30 @@
 <footer>
   <p>&copy; Adeeba 2023</p>
 </footer>
+<style>
+  * {
+    font-family: Roboto Mono;
+  }
+
+  h1 {
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    border-radius: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+  p {
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    color: rgb(144, 67, 67);
+  }
+  a:hover {
+    color: white;
+    background-color: black;
+  }
+</style>
