added fonts to h1, a and p code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <ul>
     <li>Music (Rnb, rap and hiphop)</li>
     <li>Reading (Poetry and literature)</li>
-    <li>Psychology</li>
+    <li>Movies</li>
   </ul>
 </main>
 <img src="https://i.pinimg.com/originals/f9/46/93/f94693e949a69d65e1473104be04e0ed.jpg" alt="Live Laugh Love Frank Ocean" />
@@ -21,28 +21,38 @@
 </footer>
 <style>
   * {
-    font-family: Roboto Mono;
+    font-family: "Caveat", cursive;
+    font-family: "Nanum Myeongjo", serif;
   }
 
   h1 {
     text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    font-family: "Caveat", cursive;
+    font-family: "Nanum Myeongjo", serif;
   }
 
   a {
     text-decoration: none;
     color: black;
-    border: 1px solid black;
+    border: 0.2px solid black;
     border-radius: 0.5em;
     padding-left: 0.5em;
     padding-right: 0.5em;
   }
   p {
-    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    font-family: "Nanum Myeongjo", serif;
     color: rgb(144, 67, 67);
   }
   a:hover {
     color: white;
     background-color: black;
   }
+  img {
+    width: 200px;
+  }
 </style>
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Nanum+Myeongjo&display=swap" rel="stylesheet" />
+</head>
