Changed the colours of text in each code, added a background colour, added symbols next to my name

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>Adeeba</h1>
+  <h1>Adeeba *✧･ﾟ: *</h1>
 </header>
 <nav>
   <a href="bff.html"> My Friends </a>
@@ -29,11 +29,18 @@
     text-align: center;
     font-family: "Caveat", cursive;
     font-family: "Nanum Myeongjo", serif;
+    color: rgb(219, 122, 122);
+  }
+  h2 {
+    text-align: center;
+    font-family: "Caveat", cursive;
+    font-family: "Nanum Myeongjo", serif;
+    color: rgb(219, 122, 122);
   }
 
   a {
     text-decoration: none;
-    color: black;
+    color: rgb(196, 128, 128);
     border: 0.2px solid black;
     border-radius: 0.5em;
     padding-left: 0.5em;
@@ -41,14 +48,21 @@
   }
   p {
     font-family: "Nanum Myeongjo", serif;
-    color: rgb(144, 67, 67);
+    color: rgb(204, 122, 122);
   }
   a:hover {
-    color: white;
-    background-color: black;
+    color: rgb(213, 163, 163);
+    background-color: rgb(235, 220, 220);
   }
   img {
-    width: 200px;
+    width: 20rem;
+  }
+  body {
+    background-color: rgb(235, 222, 164);
+  }
+  ul {
+    font-family: "Nanum Myeongjo", serif;
+    color: rgb(155, 85, 85);
   }
 </style>
 <head>
