--- a/bff.html
+++ b/bff.html
@@ -1,5 +1,7 @@
 <h1>Introduce Yourself</h1>
-<a href="index.html"> Home </a>
+<nav>
+  <a href="index.html"> Home </a>
+</nav>
 <h2>My Best Friends</h2>
 
 <ul>
@@ -13,6 +15,49 @@
   </li>
   <li>
     <img src="pia.jpg" alt="Live Laugh Love Pia" />
-    <p>Pia</p>
+    <p>Pia and Skipper</p>
   </li>
 </ul>
+<style>
+  img {
+    width: 20rem;
+    display: block;
+    border: 4px solid rgb(220, 156, 156);
+  }
+  body {
+    background-color: rgb(235, 222, 164);
+  }
+  h1 {
+    text-align: center;
+    font-family: "Caveat", cursive;
+    font-family: "Nanum Myeongjo", serif;
+    color: rgb(219, 122, 122);
+  }
+  h2 {
+    text-align: center;
+    font-family: "Caveat", cursive;
+    font-family: "Nanum Myeongjo", serif;
+    color: rgb(219, 122, 122);
+  }
+  ul {
+    font-family: "Nanum Myeongjo", serif;
+    color: rgb(236, 126, 126);
+  }
+  a:hover {
+    color: rgb(235, 156, 156);
+    background-color: rgb(235, 220, 220);
+  }
+  a {
+    text-decoration: none;
+    color: rgb(194, 118, 118);
+    border: 0.2px solid black;
+    border-radius: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+</style>
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Nanum+Myeongjo&display=swap" rel="stylesheet" />
+</head>
