--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </nav>
 <main>
   <h2>Year 11</h2>
-  <p>My full names Fathima Adeeba Imam Yoosuf, my birthday is on the 10th of December. I am a sagitarius and INFJ, I love the rain and think that Harry Styles is overrated. I have been to 6 schools and lived in three countires, Sri Lanka, Kuwait and now New Zealand. I have no clue what I want to do in the future other than to become rich! <a href="https://cursoreffects.com/">lol</a></p>
+  <p>My full names Fathima Adeeba Imam Yoosuf, my birthday is on the 10th of December. I am a sagitarius and INFJ, I love the rain and think that Harry Styles is overrated. I have been to 6 schools and lived in three countires, Sri Lanka, Kuwait and now New Zealand. I have no clue what I want to do in the future other than to become rich!</p>
+  <a href="https://cursoreffects.com/">Paint</a>
   <p>My interests include:</p>
 
   <ul>
